@@ -1,6 +1,7 @@
 *** Changelog ***
 = 8.5.0 - 2024-xx-xx =
 * Fix - When using a saved payment method, update the payment method's address immediately upon checkout. Fixes issues where Stripe may throw address validation errors.
+* Add - Allow customizing the title and description of the UPE payment methods.
 
 = 8.4.0 - 2024-06-13 =
 * Tweak - Resets the list of payment methods when any Stripe key is updated.
